--- a/stacks/back_end/keda_scalers/keda-sqs-consumer-scalar-with-pod-irsa.yml
+++ b/stacks/back_end/keda_scalers/keda-sqs-consumer-scalar-with-pod-irsa.yml
@@ -27,9 +27,9 @@ spec:
   triggers:
   - type: aws-sqs-queue
     metadata:
-      queueURL: https://sqs.us-east-2.amazonaws.com/111122223333/reliable_message_q
+      queueURL: https://sqs.eu-west-1.amazonaws.com/111122223333/reliable_message_q
       queueLength: "10"
-      awsRegion: "us-east-2"
+      awsRegion: "eu-west-1"
       identityOwner: pod
     authenticationRef:
       name: sales-events-consumer-trigger-auth
